# cloudhop-mcp

./: .gitignore  README.md  pyproject.toml
cloudhop_mcp/: __init__.py  __main__.py  server.py
cloudhop_mcp/tests/: test_server.py
