[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudhop-mcp"
version = "1.0.0"
description = "MCP server for CloudHop - control cloud file transfers from Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Husam Soboh"}]
keywords = ["mcp", "cloudhop", "cloud", "file-transfer", "claude"]
dependencies = ["mcp>=1.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["cloudhop_mcp", "cloudhop_mcp.*"]

[project.scripts]
cloudhop-mcp = "cloudhop_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["cloudhop_mcp/tests"]

[project.urls]
Homepage = "https://github.com/husamsoboh-cyber/cloudhop-mcp"
Issues = "https://github.com/husamsoboh-cyber/cloudhop-mcp/issues"
